--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,23 @@
   "version": "1.0",
   "manifest_version": 3,
   "action": {
-    "default_popup": "hello.html",
-    "default_icon": "hello_extensions.png"
+    "default_popup" : "popup.html"
+  },
+
+  "background" : {
+    "scripts" : "popup.js"
+  },
+  "commands": {
+    "_execute_action": {
+      "suggested_key": {
+        "windows": "Ctrl+Shift+Y",
+        "mac": "Command+Shift+Y",
+        "chromeos": "Ctrl+Shift+U",
+        "linux": "Ctrl+Shift+J"
+      },
+      "chrome-url-overrides" : {
+        "newtab" : "newPage.html"
+      }
+    }
   }
 }
